# Netflix_Bot

./: ..gitignore.un~  .gitignore  NetflixBot.py  README.md  flix_acc.txt  flix_acc1.txt  pyproject.toml
tests/: test_netflix_bot.py
