[tool.poetry]
name = "Netflix_Bot"
version = "0.1.0"
description = ""
authors = ["Farhan Alvi <farhanalvi005@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
